# books-api

./: README.md  pyproject.toml
books_api/api/: serializers.py  urls.py  views.py
books_api/api/tests/: test_views.py
books_api/books/: models.py
books_api/books/migrations/: 0001_initial.py
books_api/books/tests/: fixtures.py  test_models.py
books_api/books_api/: urls.py
books_api/books_api/settings/: base.py
